--- a/src/assets/styles/defaults/vars.css
+++ b/src/assets/styles/defaults/vars.css
@@ -54,9 +54,11 @@
   --books: #32cd32;
   --error: #d92525;
   --favorite: #ff69b4;
+  --json: #4169E1;
   --links: #9370db;
   --moon: #6a5acd;
   --music: #1e90ff;
+  --newsletter: #40e0d0;
   --now: #ff1493;
   --posts: #008080;
   --search: #4682b4;
